--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,8 @@ img {
 
 /* ================== TARJETAS ================== */
 .container_cards {
-    display: grid;
+    display: flex;
+    flex-direction: row;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 100px 20px;
@@ -323,9 +324,9 @@ footer {
         font-size: 15pt;
     }
 
-    .container_btn {
+    .container_btn, .container_cards {
         flex-direction: column;
-        width: 100%;
+        width: 75%;
         align-items: center;
     }
 
