--- a/styles.css
+++ b/styles.css
@@ -381,9 +381,16 @@ footer {
         font-size: 14px;
     }
     .about-h2 {
-        font-size: 2pt;
+        font-size: 4pt;
     }
     .about-p {
-        font-size: 2pt;
+        font-size: 4pt;
+    }
+    .container_btn, .container_cards, .container-card-projects{
+        flex-direction: column;
+        align-items: center;
+    }
+    .card-projects {
+        width: 250px;
     }
 }
