--- a/styles.css
+++ b/styles.css
@@ -139,11 +139,9 @@ img {
 .container_cards {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding-top: 50px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 50px;
+    padding: 150px 20px;
 }
 .container_cards img {
     width: 75px;
@@ -151,10 +149,11 @@ img {
 
 .card {
     background: #f8f9fa;
+    padding: 50px 50px;
     justify-items: center;
     text-align: center;
     border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.404);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 /* ================== PROYECTOS ================== */
@@ -385,10 +384,10 @@ footer {
     nav ul {
         font-size: 14px;
     }
-    .about-h2, .container-projects h2, .services h2 {
+    .about-h2, .services h2, .container-projects h2 {
         font-size: 1.5rem;
     }
-    .about-p, .container-projects p, .services p{
+    .about-p {
         font-size: 0.75rem;
     }
     .card img {
@@ -398,7 +397,7 @@ footer {
     .card h3, .card p, .card-projects h3, .card-projects p{
         font-size: 0.25rem;
     }
-    .container_btn, .card, .card-projects, .container{
+    .container_btn, .container_cards, .card, .card-projects{
         display: grid;
         flex-direction: row;
         align-items: center;
