--- a/styles.css
+++ b/styles.css
@@ -379,7 +379,13 @@ footer {
     .hero-text h1 {
         font-size: 1.5rem;
     }
+    .hero-buttons {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 35px;
 
+    }
     nav ul {
         font-size: 14px;
     }
@@ -401,6 +407,7 @@ footer {
         flex-direction: row;
         align-items: center;
         width: 150px;
+        padding: 3px;
     }
     .card-content {
         font-size: 0.50rem;
