--- a/styles.css
+++ b/styles.css
@@ -397,7 +397,7 @@ footer {
         font-size: 0.75rem;
     }
     
-    .container_btn, .container_cards, .card-projects, .container{
+    .container_btn, .card-projects, .container{
         display: grid;
         flex-direction: row;
         align-items: center;
