--- a/styles.css
+++ b/styles.css
@@ -397,12 +397,13 @@ footer {
         font-size: 0.75rem;
     }
     
-    .container_btn, .card-projects, .container{
+    .container_btn, .container_cards, .card-projects, .container{
         display: grid;
         flex-direction: row;
         align-items: center;
         width: 150px;
     }
+
     .card, .container {
         width: 150px;
         padding: 3px;
